--- a/apis/index.html
+++ b/apis/index.html
@@ -45,7 +45,7 @@
         const errorMessage = document.querySelector("#error-message");
 
         getInfo.addEventListener("click", async () => {
-            const inputUsername = String(username.value);
+            const inputUsername = username.value;
             console.log(inputUsername);
             errorMessage.textContent = "";
 
